--- a/scripts/styles.css
+++ b/scripts/styles.css
@@ -11,6 +11,11 @@ fieldset {
     width: 10em;
     display: flex;
     flex-direction: column;
+    background: repeating-linear-gradient( rgba(0,0,0,0.1) 0px,
+                                           rgba(0,0,0,0.1) 1px,
+                                           rgba(0,0,0,0.3) 1px,
+                                           rgba(0,0,0,0.3) 2px);
+    background-color: lightblue;
 }
 
 fieldset * {
