--- a/scripts/styles.css
+++ b/scripts/styles.css
@@ -19,22 +19,54 @@ fieldset {
 }
 
 form {
+    position: relative;
     background: repeating-linear-gradient( rgba(0,0,0,1) 0px,
                                            rgba(0,0,0,1) 1px,
                                            rgba(0,0,0,0.3) 1px,
                                            rgba(0,0,0,0.3) 2px);
+    animation: lines 2s linear infinite;
     padding: 2em 2em 2em 2em;
     background-color: hsl(200 100% 85% / 0.5);
     width: fit-content;
     border-radius: 15%;
     box-shadow: 0 0 10px 10px rgb(0 0 0) inset;
+    z-index: 0;
 }
 
 fieldset * {
     margin: 0.1em 0em 0.1em 0em;
 }
 
+
 legend ~ * {
     background-color: rgb(92 107 192 / 0.5);
     border: solid 0.1em rgb(255 255 255 / 50%);
+}
+
+
+#scanline {
+    content: '';
+    pointer-events: none;
+    position: absolute;
+    width: 1em;
+    height: 100%;
+    left: 0em;
+    top: 0em;
+    z-index: -1;
+    background: linear-gradient(to right,
+                                transparent   0%,
+                                #000000  50%,
+                                transparent 100% );
+    opacity: 1;
+    animation: scanline 2s linear infinite;
+}
+
+@keyframes scanline {
+    0%   { left: 0%; }
+    100% { left: 100%; }
+}
+
+@keyframes lines {
+    0%   { background-position: 100%, 0%; }
+    100% { background-position: 0%, 100%; }
 }
