--- a/scripts/styles.css
+++ b/scripts/styles.css
@@ -5,11 +5,20 @@
 
 html {
     background-color: black;
+    display: flex;
+    flex: center;
+
+    position: absolute;
+    top: 50vh;
+    left: 50vw;
+    margin-top: -200px;
+    margin-left: -200px;
 }
 
 * {
     font-family: RusselSquare;
     color: white;
+    font-size: 1.1em
 }
 
 fieldset {
@@ -20,16 +29,16 @@ fieldset {
 
 form {
     position: relative;
-    background: repeating-linear-gradient( rgba(0,0,0,1) 0px,
-                                           rgba(0,0,0,1) 1px,
-                                           rgba(0,0,0,0.3) 1px,
-                                           rgba(0,0,0,0.3) 2px);
-    animation: lines 2s linear infinite;
+    background: repeating-linear-gradient( rgba(0,0,0,1) 0ex,
+                                           rgba(0,0,0,1) 2px,
+                                           rgba(0,0,0,0.3) 2px,
+                                           rgba(0,0,0,0.3) 4px);
+    animation: lines 5s linear infinite;
     padding: 2em 2em 2em 2em;
     background-color: hsl(200 100% 85% / 0.5);
     width: fit-content;
     border-radius: 15%;
-    box-shadow: 0 0 10px 10px rgb(0 0 0) inset;
+    box-shadow: 0 0 40px 20px rgb(0 0 0) inset;
     z-index: 0;
 }
 
@@ -67,6 +76,6 @@ legend ~ * {
 }
 
 @keyframes lines {
-    0%   { background-position: 100%, 0%; }
-    100% { background-position: 0%, 100%; }
+    0%   { background-position-y: 0px; }
+    100% { background-position-y: 16px; }
 }
