Updated button styling

--- a/scripts/styles.css
+++ b/scripts/styles.css
@@ -48,8 +48,16 @@ fieldset * {
 
 
 legend ~ * {
-    background-color: rgb(92 107 192 / 0.5);
+    text-align: left;
+    color: grey;
+    background-color: hwb(200deg 19% 61% / 95%);
     border: solid 0.1em rgb(255 255 255 / 50%);
+}
+
+legend ~ :hover {
+    color: white;
+    background-color: hwb(200deg 19% 61% / 70%);
+    border: solid 0.1em rgb(200 200 255 / 50%);
 }
 
 
