--- a/scripts/styles.css
+++ b/scripts/styles.css
@@ -29,11 +29,31 @@ form {
                                            rgba(0,0,0,0.3) 4px);
     animation: lines 5s linear infinite;
     padding: 2em 2em 2em 2em;
-    background-color: rgb(153 221 255 / 50%);
+    background-color: hsl(200 100% 95% / 0.5);
     width: fit-content;
     border-radius: 15%;
-    box-shadow: 0 0 40px 20px rgb(0 0 0) inset;
-    z-index: 0;
+    box-shadow: 0 0 30px 50px rgb(0 0 0) inset;
+	outline: 10px solid black;
+	outline-offset: -5px;
+	z-index: 0;
+}
+
+legend::before {
+	content: "";
+	background-color: hsl(207 90% 90% / 0.25);
+	padding: 1.6em 11em 0em 0em;
+	position: absolute;
+	z-index: -1;
+	left: 2em;
+}
+
+form::after {
+	content: "";
+	background-color: hsl(207 90% 90% / 0.25);
+	padding: 1.6em 13.5em 0em 0em;
+	position: absolute;
+	bottom: 1em;
+	left: 2.5em;
 }
 
 fieldset {
