--- a/scripts/styles.css
+++ b/scripts/styles.css
@@ -45,6 +45,27 @@ legend::before {
 	position: absolute;
 	z-index: -1;
 	left: 2em;
+	clip-path: polygon(
+		0% 100%,
+		0% 50%,
+		1em 0em,
+		calc(100% - 3.3em) 0%,
+		calc(100% - 3.3em) 0.25em,
+		calc(100% - 3em) 0.25em,
+		calc(100% - 3em) 0%,
+		calc(100% - 2.05em) 0%,
+		calc(100% - 2.05em) 0.25em,
+		calc(100% - 1.75em) 0.25em,
+		calc(100% - 1.75em) 0%,
+		calc(100% - 1em) 0%,
+		100% 50%,
+		100% 100%,
+		calc(100% - 0.75em) 100%,
+		calc(100% - 1em) calc(100% - 0.25em),
+		3em calc(100% - 0.25em),
+		2.75em 100%,
+		0% 100%
+	);
 }
 
 form::after {
@@ -52,8 +73,19 @@ form::after {
 	background-color: hsl(207 90% 90% / 0.25);
 	padding: 1.6em 13.5em 0em 0em;
 	position: absolute;
-	bottom: 1em;
+	bottom: 1.1em;
 	left: 2.5em;
+
+	clip-path: polygon(
+	    0% 0%,
+	    2.1em 0%,
+	    2.5em 0.25em,
+	    100% 0.25em,
+	    100% 0.75em,
+	    calc(100% - 1em) 100%,
+	    1em 100%,
+	    0em 0.75em
+	);
 }
 
 fieldset {
