--- a/scripts/styles.css
+++ b/scripts/styles.css
@@ -40,7 +40,7 @@ form {
 
 legend::before {
 	content: "";
-	background-color: hsl(207 90% 90% / 0.25);
+	background-color: hsl(0 0% 0% / 0.5);
 	padding: 1.6em 11em 0em 0em;
 	position: absolute;
 	z-index: -1;
@@ -70,7 +70,7 @@ legend::before {
 
 form::after {
 	content: "";
-	background-color: hsl(207 90% 90% / 0.25);
+	background-color: hsl(0 0% 0% / 0.5);
 	padding: 1.6em 13.5em 0em 0em;
 	position: absolute;
 	bottom: 1.1em;
@@ -85,6 +85,58 @@ form::after {
 	    calc(100% - 1em) 100%,
 	    1em 100%,
 	    0em 0.75em
+	);
+}
+
+fieldset::before {
+	content: "";
+	padding: 1.8em 11.2em 0em 0em;
+	background-color: rgb(255 255 255 / 50%);
+	position: absolute;
+	top: 1.55em;
+	left: 1.9em;
+	z-index: -2;
+	font-size: 1.1em;
+	clip-path: polygon(
+		0em calc(100% - 0.1em),
+		0em calc(50% - 0.1em),
+		1em 0em,
+		calc(100% - 3.3em) 0%,
+		calc(100% - 3.3em) 0.25em,
+		calc(100% - 3.2em) 0.25em,
+		calc(100% - 3.2em) 0%,
+		calc(100% - 2.05em) 0%,
+		calc(100% - 2.05em) 0.25em,
+		calc(100% - 1.95em) 0.25em,
+		calc(100% - 1.95em) 0%,
+		calc(100% - 1em) 0%,
+		100% calc(50% - 0.1em),
+		100% 100%,
+		calc(100% - 0.95em) 100%,
+		calc(100% - 1.2em) calc(100% - 0.25em),
+		3.2em calc(100% - 0.25em),
+		2.95em 100%,
+		0% 100%
+	);
+}
+
+fieldset::after {
+	content: "";
+	padding: 1.8em 12.6em 0em 0em;
+	background-color: rgb(255 255 255 / 50%);
+	position: absolute;
+	top: calc(100% - 2.65em);
+	left: 2.1em;
+	z-index: -2;
+	clip-path: polygon(
+	    0% 0%,
+	    2.1em 0%,
+	    2.5em 0.25em,
+	    100% 0.25em,
+	    100% 0.9em,
+	    calc(100% - 1em) 100%,
+	    1em 100%,
+	    0em 0.9em
 	);
 }
 
@@ -207,7 +259,7 @@ button ::before {
     height: 100%;
     left: 0em;
     top: 0em;
-    z-index: -1;
+    z-index: -2;
     background: linear-gradient(to right,
                                 transparent   0%,
                                 #000000  50%,
